# snyk-mcp-workshop

./: README.md  pyproject.toml  server.py
examples/: hello_world.py  promptinject-hello_world.py  vulnerable_code.py
