[project]
name = "snyk-security-workshop"
version = "1.0.0"
description = "Snyk AI Security Summit - Secure MCP Server Workshop"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.4.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

